--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Broadway</title>
-  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-</head>
-<body>
-  
-</body>
+  <head>
+    <title>Broadway</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="header">
+      <h1>Broadway Design</h1>
+      <br \>
+      <ul>
+        <li>Home</li>
+        <li>Process</li>
+        <li>Work</li>
+        <li>Team</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+
+    <div class="footer">
+      
+    </div>
+
+  </body>
 </html>
