--- a/index.html
+++ b/index.html
@@ -5,20 +5,45 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
     <div class="header">
       <h1>Broadway Design</h1>
       <br \>
       <ul>
-        <li>Home</li>
-        <li>Process</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
+        <a href="#"><li>Home</li></a>
+        <a href="#"><li>Process</li></a>
+        <a href="#"><li>Work</li></a>
+        <a href="#"><li>Team</li></a>
+        <a href="#"><li>Contact</li></a>
       </ul>
     </div>
 
+    <div class="process">
+      <h2>Our process</h2>
+      <div class="stage">
+        <img src="resources/images/identify.svg" />
+        <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
+      </div>
+      <div class="stage">
+        <img src="resources/images/understand.svg" />
+        <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+      </div>
+      <div class="stage">
+        <img src="resources/images/execute.svg" />
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
+      </div>
+    </div>
+
+    <div class="separator">
+    </div>
+
+    <div class="services">
+    </div>
+
     <div class="footer">
-      
     </div>
 
   </body>
