--- a/index.html
+++ b/index.html
@@ -38,9 +38,22 @@
     </div>
 
     <div class="separator">
+      <h2>Designed in New York</h2>
     </div>
 
     <div class="services">
+      <div class="stage">
+        <h3>Portfolio</h3>
+        <p>Coming Soon</p>
+      </div>
+      <div class="stage">
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
+      </div>
+      <div class="stage">
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+      </div>
     </div>
 
     <div class="footer">
