Footer + finishing details

--- a/index.html
+++ b/index.html
@@ -53,10 +53,20 @@
       <div class="stage">
         <h3>Contact</h3>
         <p>Phone: (555)-555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
       </div>
     </div>
 
     <div class="footer">
+      <p>
+        © Broadway 2017
+        <a class="footer-element" href="#">Home</a>
+        <a class="footer-element" href="#">About</a>
+        <a class="footer-element" href="#">Work</a>
+        <a class="footer-element" href="#">Team</a>
+        <a class="footer-element" href="#">Contact</a>
+      </p>
     </div>
 
   </body>
